--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -64,20 +64,16 @@ code {
   padding: 10px 15px;
 }
 
-
-  footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 20px;
+footer {
+  clear: both;
+  position: relative;
+  padding-top: 220px;
   width: 100%;
   color: black; 
   background: transparent;
-  font-size:1.5em;
+  font-size:1em;
   text-align: center;
-  line-height:50px;
-  }
-
+}
 .fa, .fab {
      padding-right: 7px;
      color: black;
@@ -94,4 +90,8 @@ code {
   margin-right: auto;
   width: 300px;
   height:300px;
+}
+
+.footercontainer {
+  height: 20px;
 }
